k8s/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: product-service
          imagePullPolicy: Never
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: products-srv
spec:
  type: ClusterIP
  selector:
    app: products
  ports:
    - name: http
      port: 3000
      targetPort: 3000
