k8s/redis-product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-product
  template:
    metadata:
      labels:
        app: redis-product
    spec:
      containers:
        - name: redis-product
          image: redis:alpine
          resources:
            limits:
              memory: 256Mi
              cpu: "0.1"
---
apiVersion: v1
kind: Service
metadata:
  name: redis-product
spec:
  type: ClusterIP
  selector:
    app: redis-product
  ports:
    - name: http
      port: 6379
      targetPort: 6379
