k8s/redis-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-user
  template:
    metadata:
      labels:
        app: redis-user
    spec:
      containers:
        - name: redis-user
          image: redis:alpine
          resources:
            limits:
              memory: 512Mi
              cpu: "0.1"
---
apiVersion: v1
kind: Service
metadata:
  name: redis-user
spec:
  type: NodePort
  selector:
    app: redis-user
  ports:
    - name: http
      port: 6379
      targetPort: 6379
